Bug 466636 - Unable to set the value of # higher than 99 when bulk renaming files using Rename Tool provided by Dolphin
Summary: Unable to set the value of # higher than 99 when bulk renaming files using Re...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.103.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
: 466959 468207 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-03-01 06:42 UTC by rudrapratapsingh
Modified: 2023-04-13 18:39 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.105.0
Sentry Crash Report:


Attachments
A screenshot of the Rename Tool with the # value set to 99 and '+' button grayed out. (17.92 KB, image/png)
2023-03-01 06:42 UTC, rudrapratapsingh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rudrapratapsingh 2023-03-01 06:42:39 UTC
Created attachment 156849 [details]
A screenshot of the Rename Tool with the # value set to 99 and '+' button grayed out.

SUMMARY
***
Unable to set the value of # higher than 99 when bulk renaming files.
***


STEPS TO REPRODUCE
1. Select multiple files, press F2 or right click and select Rename
2. Try to set a value higher than 99 by either typing the exact value or using + and - buttons.

OBSERVED RESULT
The number won't go higher than 99.

EXPECTED RESULT
The number should go higher than 99.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Kernel: 6.2.1-zen1-1-zen arch: x86_64 bits: 64 compiler: gcc v: 12.2.1
Distro: Garuda Linux
Base: Arch Linux
Comment 1 Felix Ernst 2023-03-07 15:23:33 UTC
*** Bug 466959 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2023-03-07 22:45:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1219
Comment 4 Zamundaaa 2023-03-08 00:38:12 UTC
Git commit 04e31155574939dc0be2078b5f17c36791ef57e5 by Xaver Hugl.
Committed on 07/03/2023 at 22:44.
Pushed by zamundaaa into branch 'master'.

widgets/renamefiledialog: set number limit again

Not setting a maximum makes it default to 99, which is not what we want.
Instead, set it to a billion, which should be enough for everyone

M  +1    -0    src/widgets/renamefiledialog.cpp

https://invent.kde.org/frameworks/kio/commit/04e31155574939dc0be2078b5f17c36791ef57e5
Comment 5 Felix Ernst 2023-03-08 10:22:58 UTC
Git commit d8e4f575e4967a2303812529a866b89ad2fe26f5 by Felix Ernst, on behalf of Xaver Hugl.
Committed on 08/03/2023 at 10:22.
Pushed by felixernst into branch 'kf5'.

widgets/renamefiledialog: set number limit again

Not setting a maximum makes it default to 99, which is not what we want.
Instead, set it to a billion, which should be enough for everyone


(cherry picked from commit 04e31155574939dc0be2078b5f17c36791ef57e5)

M  +1    -0    src/widgets/renamefiledialog.cpp

https://invent.kde.org/frameworks/kio/commit/d8e4f575e4967a2303812529a866b89ad2fe26f5
Comment 6 Dav84 2023-03-30 19:19:30 UTC
They still haven't fixed the reported problem, I'm not a developer and I don't know how difficult it is to solve something that didn't happen before in the system or is it that now we can only rename no more than 99 files?
Comment 7 Andreas Sturmlechner 2023-03-30 19:28:50 UTC
(In reply to Dav84 from comment #6)
> They still haven't fixed the reported problem, I'm not a developer and I
> don't know how difficult it is to solve something that didn't happen before
> in the system or is it that now we can only rename no more than 99 files?
The fix (see above) went in after 5.104.0 release, so unless your distribution has backported that fix you will get it with KDE Frameworks 5.105.0. Otherwise, file a bug with your distribution, that is, downstream.
Comment 8 Dav84 2023-04-01 18:05:41 UTC
OK... Thanks, because I use KDE neon 5.27 and I'm still with KDE Frameworks 5.104.0, to wait for the update and the possible solution, thanks.
Comment 9 Felix Ernst 2023-04-12 19:45:33 UTC
*** Bug 468207 has been marked as a duplicate of this bug. ***