widgets/renamefiledialog: set number limit again

Not setting a maximum makes it default to 99, which is not what we want.
Instead, set it to a billion, which should be enough for everyone

BUG: 466636